--- a/package.json
+++ b/package.json
@@ -12,13 +12,22 @@
   "dependencies": {
     "@react-native-firebase/app": "^14.7.0",
     "@react-native-firebase/auth": "^14.7.0",
+    "@react-native-firebase/firestore": "^14.7.0",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
     "@react-navigation/stack": "^6.2.1",
+    "hoist-non-react-methods": "^1.1.0",
     "react": "17.0.2",
     "react-native": "0.68.0",
+    "react-native-flash-message": "^0.2.1",
     "react-native-form": "^2.1.3",
-    "react-native-form-component": "^2.3.3"
+    "react-native-form-component": "^2.3.3",
+    "react-native-maps": "^0.31.0-beta.1",
+    "react-native-paper": "^4.12.0",
+    "react-native-safe-area-context": "^4.2.4",
+    "react-native-screens": "^3.13.1",
+    "react-native-vector-icons": "^9.1.0",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "7.17.9",
