add notes without location

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -19,6 +19,8 @@ target 'location_app' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
+  pod 'react-native-location', :path => '../node_modules/react-native-location'
+
   target 'location_appTests' do
     inherit! :complete
     # Pods for testing
