--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "hoist-non-react-methods": "^1.1.0",
     "react": "17.0.2",
     "react-native": "0.68.0",
+    "react-native-elements": "^3.4.2",
     "react-native-flash-message": "^0.2.1",
     "react-native-form": "^2.1.3",
     "react-native-form-component": "^2.3.3",
