--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-firebase/app": "^14.7.0",
     "@react-native-firebase/auth": "^14.7.0",
     "@react-native-firebase/firestore": "^14.7.0",
@@ -25,11 +26,13 @@
     "react-native-flash-message": "^0.2.1",
     "react-native-form": "^2.1.3",
     "react-native-form-component": "^2.3.3",
+    "react-native-geolocation-service": "^5.3.0-beta.4",
     "react-native-location": "^2.5.0",
     "react-native-maps": "^0.31.0-beta.1",
     "react-native-paper": "^4.12.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
+    "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.1.0",
     "react-navigation-stack": "^2.10.4"
   },
